Set addNationalityButton to a variable and correct spacing

--- a/app/frontend/styles/_nationalities-component.scss
+++ b/app/frontend/styles/_nationalities-component.scss
@@ -1,3 +1,7 @@
 .app-nationality-remove-link {
   float: right;
 }
+
+.app-nationality-add-margin-to-last-select .govuk-form-group:last-of-type {
+  margin-bottom: 30px;
+}
